# MCGS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md
.github/workflows/: cmake-linux.yml
App/: App.cpp  App.hpp  CMakeLists.txt  raster_pbr.cpp  raster_pbr_context.cpp  raster_pbr_context.hpp
App/shader/: frag.frag  frag.frag.spv  vert.vert  vert.vert.spv
app/: App.cpp  App.hpp  CMakeLists.txt  GaussianContext.cpp  GaussianContext.hpp  offscreen.cpp  offscreen_context.cpp  offscreen_context.hpp
app/shader/: Binding.h  Constants.h  offscreen.frag  offscreen.frag.spv  offscreen.vert  offscreen.vert.spv
include/: GSContext.hpp  GSPassBase.hpp  duplicateWithKeysPass.hpp  duplicateWithKeys_pass.hpp  gaussian_context.hpp  gaussian_manager.hpp  identifyPass.hpp  identify_pass.hpp  ply_loader.hpp  precessPass.hpp  precess_pass.hpp  rasterPass.hpp  raster_pass.hpp  sort.hpp  sort_histogram_pass.hpp  sort_histogram_pass2.hpp  sort_multi_pass.hpp  sort_multi_pass2.hpp  sort_pass.hpp  sumPass.hpp  sum_pass.hpp
include/Helper/: cameraManager.hpp
include/shaders/: DataStruct.h  allbuffer_reference.glsl  config.glsl  duplicate.comp  duplicate.comp.spv  identify.comp  identify.comp.spv  inclusiveSum.comp  inclusiveSum.comp.spv  inclusiveSum_pingpng.comp  inverseIndex.comp  inverseIndex.comp.spv  process.comp  process.comp.spv  projection.comp  projection.comp.spv  push_contant.h  rank.comp  rank.comp.spv  render.comp  render.comp.spv  splat.frag  splat.frag.spv  splat.vert  splat.vert.spv  util.glsl
include/shaders/gpusort/: downsweep.comp  downsweep.comp.spv  spine.comp  spine.comp.spv  upsweep.comp  upsweep.comp.spv
include/shaders/sort/: multi_radixsort.comp  multi_radixsort.comp.spv  multi_radixsort_histograms.comp  multi_radixsort_histograms.comp.spv  single_radixsort.comp  single_radixsort_64.comp  single_radixsort_real.comp  single_radixsort_to.comp  sort.comp  sort.comp.spv  temp.comp
include/shaders1/: allbuffer_reference.glsl  duplicate.comp  identify.comp  identify.comp.spv  inclusiveSum.comp  inclusiveSum.comp.spv  process.comp  process.comp.spv
include/shaders1/sort/: multi_radixsort.comp.spv  multi_radixsort_histograms.comp.spv  sort.comp
include/sort/: multiSort_pass.hpp  multi_sort_pass.hpp  sortHistogramPass.hpp  sortMultiExcutePass.hpp  sort_histogram_pass.hpp  sort_manager.hpp  sort_multi_excute_pass.hpp  sort_multi_pass.hpp
origin_cuda/: forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu
src/: GSContext.cpp  GSPassBase.cpp  duplicateWithKeysPass.cpp  duplicateWithKeys_pass.cpp  gaussian_context.cpp  gaussian_manager.cpp  identifyPass.cpp  identify_pass.cpp  ply_loader.cpp  processPass.cpp  process_pass.cpp  rasterPass.cpp  render_pass.cpp  sort.cpp  sort_histogram_pass.cpp  sort_histogram_pass2.cpp  sort_multi_pass.cpp  sort_multi_pass2.cpp  sort_pass.cpp  sumPass.cpp  sum_pass.cpp
src/Helper/: cameraManager.cpp
src/sort/: multiSort_pass.cpp  multi_sort_pass.cpp  sortHistogramPass.cpp  sortMultiExcutePass.cpp  sort_histogram_pass.cpp  sort_manager.cpp  sort_multi_excute_pass.cpp  sort_multi_pass.cpp
